--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
 <body>
     <h1> holis </h1>
+    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero enim saepe excepturi dicta commodi voluptas maiores ducimus velit, facilis rerum quis corporis vitae incidunt quasi fuga reiciendis? Officia, nemo nobis?</p>
+
+    <h2>hhola</h2>
 </body>
 
 </html>
